# flex_pimpl_plugin

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: Exports.cmake  Findflex_pimpl_plugin.cmake  HelperFlextool.cmake  ProjectFiles.cmake  RunFlextool.cmake
conf/: flex_pimpl_plugin.conf
include/flex_pimpl_plugin/: CodeGenerator.hpp  EventHandler.hpp  Tooling.hpp  version.hpp
src/: CodeGenerator.cc  EventHandler.cc  Tooling.cc  flex_pimpl_plugin_settings.cc.in  plugin_main.cc
test_package/: conanfile.py
test_package/cmake/: HelperFlextool.cmake
tests/: CMakeLists.txt  Foo.cc  Foo.hpp  FooImpl.cc  FooImpl.hpp  example_datatypes.hpp  main.cpp  pimpl.test.cpp  pimpl_annotations.hpp
tests/code_generation/: pimpl_generation.cc
